--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
-name = "huffman-coding"
+name = "huff"
 version = "0.1.0"
-authors = ["dm065392 <Dan.Muir@cerner.com>"]
+authors = ["Dan Muir <daniel.muir.14@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = "2"
+
+[profile.release]
+debug = true
